kubernetes/apps/fakerjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: faker-express-api-service
  namespace: fakerjs
spec:
  selector:
    app: faker-express-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
