kubernetes/apps/fakerjs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faker-express-api-ingress
  namespace: fakerjs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: faker-api.home.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: faker-express-api-service
                port:
                  number: 80
